# CI_2022_292432

./: README.md  pyproject.toml
lab1/: README.md  lab1.ipynb
lab2/: README.md  lab2.ipynb  lab2_mine.ipynb  pyproject.toml
lab3/: LAB3_1(1).ipynb  README.md  lab3.ipynb  lab3_genetic.ipynb  pyproject.toml
