[tool.poetry]
name = "ci-2022-292432"
version = "0.1.0"
description = ""
authors = ["francescoscalera99 <francesoscalera99@gmail.com>"]
readme = "README.md"
packages = [{include = "ci_2022_292432"}]

[tool.poetry.dependencies]
python = "^3.9"
numpy = "^1.23.4"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
