[tool.poetry]
name = "lab2"
version = "0.1.0"
description = ""
authors = ["Filippo Maria Cardano <s292113@polito.it>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
logging = "^0.4.9.6"
numpy = "^1.23.4"
tqdm = "^4.64.1"
sklearn = "^0.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"